<resources>
    <string name="app_name">Mealer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mealer">MEALER</string>
    <string name="name">Name</string>
    <string name="choose_a_user_type">Choose a user type:</string>
    <string name="options">Options</string>
    <string name="usertypes">UserTypes</string>
    <string name="users">Users:</string>


    <string-array name="Users">
        <item>Select</item>
        <item>Cook</item>
        <item>Client</item>
    </string-array>
    <string name="title_activity_client_register">clientRegister</string>
    <string name="client_registration">Client Registration</string>
    <string name="button">Button</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="address">Address</string>
    <string name="credit_card_info">Credit Card info</string>
    <string name="register">Register</string>
    <string name="title_activity_cook_register">cookRegister</string>
    <string name="cook_registration">Cook Registration</string>
    <string name="user_description">User description</string>
    <string name="title_activity_welcom_menu">WelcomMenu</string>
    <string name="log_off">Log Off</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="please_register">Please register</string>

</resources>