<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/mealer"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/choose_a_user_type"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/UserTypes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/usertypes"
            android:spinnerMode="dropdown"
            android:text="@string/options" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>